--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,91 +1,55 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-ul {
-  list-style: none;
-}
-
-ul.parent {
+body {
+  background-color: #f4f4f4;
+  font-family: sans-serif;
   display: flex;
-  justify-content: flex-end;
-  background-color: grey;
-  padding: 10px;
-}
-ul.parent li {
-  position: relative;
-}
-ul.parent li a {
-  text-decoration: none;
-  text-transform: uppercase;
-  padding: 10px;
-  font-size: 15px;
-  color: #fff;
-}
-ul.parent li a:hover {
-  color: red;
-}
-ul.parent li ul {
-  position: absolute;
-  display: none;
-  padding: 10px;
-  background-color: grey;
-  top: 25px;
-}
-ul.parent li:hover ul {
-  display: block;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
-.header {
-  width: 100%;
-  height: 260px;
-  padding: 10px;
-  background-image: url(../images/bfqcws.webp);
-  background-repeat: no-repeat;
-}
-
-.content {
-  padding: 10px;
-}
-.content .products {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-.content .products li {
-  width: 200px;
-  height: 200px;
-  position: relative;
-  background-color: #f0f0f0;
-}
-.content .products li:hover {
-  background-color: antiquewhite;
-  cursor: pointer;
-}
-.content .products li p {
+.container {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   text-align: center;
-  text-transform: capitalize;
-  font: bold;
-  background-color: aliceblue;
 }
-.content .products li button {
+.container h2 {
+  margin-bottom: 20px;
+}
+.container input[type=email],
+.container input[type=password] {
   width: 100%;
-  position: absolute;
-  background-color: antiquewhite;
-  bottom: 0;
-  height: 20px;
+  padding: 12px;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
-.content .products li button:hover {
+.container input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
-  color: red;
 }
-.content .products li img {
-  position: absolute;
-  width: 50%;
-  height: 50%;
-  left: 50px;
-  bottom: 50px;
+.container input[type=submit]:hover {
+  background-color: #3d8b40;
+}
+.container .checkbox {
+  margin-bottom: 15px;
+}
+.container .checkbox label {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+.container .forgot-password {
+  margin-top: 10px;
+}
+.container .forgot-password a {
+  color: #4CAF50;
+  text-decoration: none;
 }/*# sourceMappingURL=style.css.map */
