--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,90 +1,68 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-ul{
-    list-style: none;
-}
-ul.parent{
+$primary-color: #4CAF50;
+$background-color: #f4f4f4;
+$container-bg: #fff;
+$border-color: #ddd;
+
+body {
+    background-color: $background-color;
+    font-family: sans-serif;
     display: flex;
-    justify-content: flex-end;
-    background-color: grey;
-    padding: 10px;
-    li{
-        position: relative;
-        a{
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.container {
+    background-color: $container-bg;
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+
+    h2 {
+        margin-bottom: 20px;
+    }
+
+    input[type="email"],
+    input[type="password"] {
+        width: 100%;
+        padding: 12px;
+        margin-bottom: 15px;
+        border: 1px solid $border-color;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    input[type="submit"] {
+        background-color: $primary-color;
+        color: white;
+        padding: 12px 20px;
+        margin-top: 10px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+
+        &:hover {
+            background-color: darken($primary-color, 10%);
+        }
+    }
+
+    .checkbox {
+        margin-bottom: 15px;
+
+        label {
+            display: inline-block;
+            vertical-align: middle;
+            margin-left: 5px;
+        }
+    }
+
+    .forgot-password {
+        margin-top: 10px;
+
+        a {
+            color: $primary-color;
             text-decoration: none;
-            text-transform: uppercase;
-            padding: 10px;
-            font-size: 15px;
-            color: #fff;
-            &:hover{
-                color: red;
-            }
-        }
-        ul{
-            position: absolute;
-            display: none;
-            padding: 10px;
-            background-color: grey;
-            top: 25px;
-        }
-        &:hover{
-            ul{
-            display: block;
-            }
         }
     }
-}
-.header{
-    width: 100%;
-    height: 260px;
-    padding: 10px;
-    background-image: url(../images/bfqcws.webp);
-    background-repeat: no-repeat;
-}
-.content{
-    padding: 10px;
-    .products{
-        display: flex;
-        justify-content: space-between;
-        list-style: none;
-        flex-wrap:wrap;
-        gap: 10px;
-        li{
-            width: 200px;
-            height: 200px;
-            position: relative;
-            background-color: #f0f0f0;
-            &:hover{
-                background-color: antiquewhite;
-                cursor: pointer;
-            }
-            p{
-                text-align: center;
-                text-transform: capitalize;
-                font: bold;
-                background-color: aliceblue;
-            }
-            
-            button{
-                width: 100%;
-                position: absolute;
-                background-color: antiquewhite;
-                bottom: 0;
-                height: 20px;
-                &:hover{
-                    cursor: pointer;
-                    color: red;
-                }
-            }
-            img{
-                position: absolute;
-                width: 50%;
-                height: 50%;
-                left: 50px;
-                bottom: 50px;
-            }
-        }
-    }
-}
+}               
